# spatial-awareness

./: .gitignore  DATA_CONTRACT.md  Hanah's_Stuff_(Steps_2_&_3_&_4) (18).ipynb  README.md  package.json
frontend/: README.md  (+2 more)
mcp_server/: README.md  pyproject.toml  pytest.ini
mcp_server/artifacts/agent_traces/phase34/: agent_trace.json  agent_trace.md  agent_trace_clean.json  agent_trace_havcr2.json  agent_trace_havcr2.md  agent_trace_keeper.json  agent_trace_keeper.md  agent_trace_scout.json  agent_trace_scout.md  agent_trace_stance.json
mcp_server/artifacts/calibration/: CALIBRATION_RESULTS.md  benchmark_cache.json
mcp_server/data/: .gitignore  _test_prereg.jsonl
mcp_server/scripts/: mock_client.py  run_agent.py  run_e2e_tool_sequence.py  run_e2e_v4.sh  run_phase34_sagemaker.sh  sagemaker_jupyter_exec.py  test_tool.py
mcp_server/src/spatial_mcp/: __init__.py  __main__.py  graph.py  http_api.py  logging_util.py  memory.py  registry.py  schemas.py  server.py  you_client.py
mcp_server/src/spatial_mcp/agent/: __init__.py  bedrock.py  calibrate_benchmark.py  cli.py  driver.py  evidence.py  extract.py  gating.py  hypothesis.py  independence.py  lit_clusters.py  mcp_client.py  preregister.py  red_team.py  report.py  trace.py  trust.py
mcp_server/src/spatial_mcp/fixtures/: cells.py  tcga_cohort.py
mcp_server/tests/: test_conflict.py  test_differential_survival.py  test_epistemics.py  test_evidence.py  test_fail_loud.py  test_gating.py  test_gene_arg_binding.py  test_gene_binding.py  test_graph_and_recommend.py  test_lit_stance.py  test_search_literature.py
(+63 files in other folders)
