[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spatial-mcp"
version = "0.1.0"
description = "MCP server scaffold for Owkin K Pro — spatial exhaustion tools + memory"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]>=1.10,<2",
  "jsonschema>=4.20",
]

[project.scripts]
spatial-mcp = "spatial_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spatial_mcp = ["py.typed"]
